--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -7,6 +7,7 @@
 <html>
   <head>
     <title>Getting Started Extension's Popup</title>
+    <script type="text/javascript" src="popup.js"></script>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
@@ -31,7 +32,7 @@
   <body>
     <div id="status"></div>
     <img id="image-result" hidden>
-    HELLO WORLD
+    Your Toggl API key is <p id="togglApiKey">undefined</p>
   </body>
 </html>
 
